Fix overflow
To do still needed

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@ body {
     flex-wrap: wrap;
     max-width: 960px;
     max-height: 960px;
+    min-width: 960px;
+    min-height: 960px;
     border: 2px solid red;
 }
 
